--- a/chat_before/bower.json
+++ b/chat_before/bower.json
@@ -14,6 +14,7 @@
     "tests"
   ],
   "dependencies": {
+    "jquery": "~2.2.2",
     "angular": "~1.5.3",
     "angular-route": "~1.5.3",
     "angular-sanitize": "~1.5.3",
